[package]
name = "tuna-file"
version = "0.1.0"
edition = "2021"
authors = ["Tom Solberg <me@sbg.dev>"]
license = "MIT OR Apache-2.0"
description = "Tuna-bles for live-tweaking of variables, for games and other applications."
homepage = "https://github.com/tgolsson/tuna"
repository = "https://github.com/tgolsson/tuna"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "*"
notify = "4"
anyhow = "1"

tuna = { version = "^0.1", path = "../tuna" }
log = "0.4"
