[package]
name = "tuna"
version = "0.0.1"
authors = ["Tom Solberg <me@sbg.dev>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Tuna-bles for live-tweaking of variables, for games and other applications."
homepage = "https://github.com/tgolsson/tuna"
repository = "https://github.com/tgolsson/tuna"

[dependencies]
lazy_static = "1.4.0"
parking_lot = "0.11.1"
nanoserde = "0.1.25"

[dev-dependencies]
serial_test = "0.5.1"

[features]
wasm-bindgen = ["parking_lot/wasm-bindgen"]
default = []
auto-register = []
